--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,14 @@
-.App {
-  text-align: center;
+html,
+body {
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
+body {
+  background: #34483a;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+#main-container {
+  margin-left: 65px !important;
+  height: 100%;
+  margin-right: 20px;
 }
