--- a/src/scss/_newscarousel.scss
+++ b/src/scss/_newscarousel.scss
@@ -1,3 +1,5 @@
+@import 'config';
+
 .carousel {
   width: 100%;
   padding-right: 0px;
@@ -11,10 +13,5 @@
   font-family: 'Lobster', cursive;
   font-size: 4rem;
   line-height: 0.75;
-  color: #85a4a4;
-}
-
-#carousel-wrapper {
-  margin-left: 15px;
-  margin-top: 15px;
+  color: $color-2;
 }
