added animated scroll for shop page

--- a/src/scss/_shopdisplay.scss
+++ b/src/scss/_shopdisplay.scss
@@ -1,6 +1,7 @@
 #shop-display-wrapper {
   width: 100%;
   margin-top: 20px;
+  padding-top: 20px;
 }
 
 #shop-display-header-text {
@@ -11,7 +12,7 @@
 }
 
 #shop-display-body {
-  height: 700px;
+  height: 730px;
   background: $color-1;
   width: 100%;
   border-radius: 5px;
