fixed basename for new repo name

--- a/src/scss/_floatingcontactbutton.scss
+++ b/src/scss/_floatingcontactbutton.scss
@@ -20,5 +20,5 @@
   color: white;
   border-color: white;
   cursor: pointer;
-  transform: rotate(360deg);
+  transform: rotate(360deg) scale(1.2);
 }
