--- a/src/scss/_sidenav.scss
+++ b/src/scss/_sidenav.scss
@@ -33,6 +33,7 @@
 .nav-icon:hover {
   color: $highlight;
   cursor: pointer;
+  transform: scale(1.3);
 }
 
 #hide-nav-button {
@@ -48,4 +49,5 @@
 #hide-nav-button:hover {
   color: $highlight;
   cursor: pointer;
+  transform: rotate(45deg) scale(1.3);
 }
